fix sub-navigation z-index for homepage

--- a/app/assets/stylesheets/partials/_page.css.sass
+++ b/app/assets/stylesheets/partials/_page.css.sass
@@ -66,7 +66,7 @@ html
   position: absolute
   top: 20px
   right: 0
-  z-index: 10
+  z-index: 30
   padding-top: 15px
   +transition(padding-top 0.1s linear, opacity 0.3s linear 0.2s)
   visibility: hidden
